--- a/index.html
+++ b/index.html
@@ -29,25 +29,28 @@
       </section>
 
       <section>
+        <!-- этот заголовок будет скрыт или его тут не хватает -->
+        <h2>Наши преимущества</h2>
+        <!--  этот заголовок будет скрыт или его тут не хватает -->
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные</h2>
+            <h3>Современные</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
