--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               width="270"
               height="260"
             />
-            <h2>Игорь Демьяненко</h2>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -106,7 +106,7 @@
               width="270"
               height="260"
             />
-            <h2>Ольга Репина</h2>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -116,7 +116,7 @@
               width="270"
               height="260"
             />
-            <h2>Николай Тарасов</h2>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -126,7 +126,7 @@
               width="270"
               height="260"
             />
-            <h2>Михаил Ермаков</h2>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -136,7 +136,12 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        <a href="https://goo.gl/maps/UfQVwH95Z5g3kcid9">г. Киев, пр-т Леси Украинки, 26</a>
+        <a
+          href="https://goo.gl/maps/UfQVwH95Z5g3kcid9"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          >г. Киев, пр-т Леси Украинки, 26</a
+        >
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
