--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h2>Игорь Демьяненко</h2>
             <p>Product Designer</p>
           </li>
           <li>
@@ -111,7 +111,7 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
+            <h2>Ольга Репина</h2>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -121,7 +121,7 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
+            <h2>Николай Тарасов</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
+            <h2>Михаил Ермаков</h2>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -141,12 +141,7 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        <a
-          href="https://goo.gl/maps/UfQVwH95Z5g3kcid9"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-          >г. Киев, пр-т Леси Украинки, 26</a
-        >
+        <a href="https://goo.gl/maps/UfQVwH95Z5g3kcid9">г. Киев, пр-т Леси Украинки, 26</a>
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
