--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
   </head>
 
   <body>
-    <header class="hed">
-      <div class="content-block header-content">
-        <a href="./index.html">WebStudio</a>
-        <nav>
-          <ul class="navi">
-            <li><a href="">Студия</a></li>
-            <li><a href="">Потфолио</a></li>
-            <li><a href="#address-webstudio">Контакты</a></li>
-          </ul>
-        </nav>
-        <div>
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </div>
-      </div>
+    <header>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Потфолио</a></li>
+          <li><a href="#address-webstudio">Контакты</a></li>
+        </ul>
+      </nav>
+
+      <a href="mailto:info@example.com">info@example.com</a>
+      <a href="tel:+380991111111">+38 099 111 11 11</a>
     </header>
 
     <main>
